Fix horizontal scrolling on reports
As per other Bootstrap-based themes, Decaf 2.0 does not use a div with the
"region-content" class inside the "region-main" div.  The rule which
applies the horizontal scrollbar still included the ".region-content"
class in its selector, so was not being matched.

Fixes #18

--- a/style/core.css
+++ b/style/core.css
@@ -297,7 +297,7 @@ table.glossarypost {
 body.pagelayout-report #page-content {
     overflow:hidden;
 }
-body.pagelayout-report #page-content #region-main .region-content {
+body.pagelayout-report #page-content #region-main {
     overflow-x:auto;
 }
 
